add JDK 21 profile