@@ -76,7 +76,7 @@
 		<java.version>17</java.version>
 		<maven.compiler.source>${java.version}</maven.compiler.source>
 		<maven.compiler.target>${java.version}</maven.compiler.target>
-                <maven.compiler.release>${java.version}</maven.compiler.release> 
+		<maven.compiler.release>${java.version}</maven.compiler.release>
 		<xtext.version>2.32.0</xtext.version>
 		<guice.version>5.1.0</guice.version>
 		<junit.version>5.10.0</junit.version>
@@ -96,6 +96,7 @@
 		<failsafe.version>3.1.2</failsafe.version>
 		<docker-registry-url>ghcr.io/heutelbeck</docker-registry-url>
 		<sonar.exclusions>**/xtext-gen/**/*,**/xtend-gen/**/*,**/emf-gen/**/*</sonar.exclusions>
+		<argLine/>
 	</properties>
 
 	<modules>
@@ -233,8 +234,8 @@
 					<configuration>
 						<source>${java.version}</source>
 						<target>${java.version}</target>
-                                                <showDeprecation>true</showDeprecation>
-                                                <showWarnings>true</showWarnings>
+						<showDeprecation>true</showDeprecation>
+						<showWarnings>true</showWarnings>
 						<annotationProcessorPaths>
 							<path>
 								<groupId>org.projectlombok</groupId>
@@ -592,6 +593,25 @@
 						</executions>
 					</plugin>
 				</plugins>
+			</build>
+		</profile>
+		<profile>
+			<activation>
+				<jdk>[21,)</jdk>
+			</activation>
+			<build>
+				<pluginManagement>
+					<plugins>
+						<plugin>
+							<groupId>org.apache.maven.plugins</groupId>
+							<artifactId>maven-surefire-plugin</artifactId>
+							<version>3.1.0</version>
+							<configuration>
+								<argLine>@{argLine} -XX:+EnableDynamicAgentLoading</argLine>
+							</configuration>
+						</plugin>
+					</plugins>
+				</pluginManagement>
 			</build>
 		</profile>
 	</profiles>
